--- a/src/index/components/layout/layout.less
+++ b/src/index/components/layout/layout.less
@@ -1,29 +1,16 @@
-@import '../../index.less';
- 
-.LBodyOuter{
-    height:100vh;
-    display:flex;
-    flex-direction:column;
-    .LHeader{
-        height:50px;
-        width:100vw;
-        background:@bg-color01;
-        flex-shrink:0;
-    }
-    .LBody{
-        flex-grow: 1;
-        width:100vw;
-        display:flex;
-        flex-direction:row;
-        .LTree{
-            width:200px;
-            background:@bg-color02;
-            flex-shrink:0;
-            overflow:auto;
-        }
-        .LContent{
-            flex-grow:1;
-            overflow:auto;
-        }
-    }
-}
+.nav-logo-wrap{
+    display: inline-block;
+    font-size:26px;
+    width: 26px;
+    //height:50px;
+    vertical-align: top;
+    margin-left:12px;
+    margin-top:4px;
+  }
+  .logo {
+    width: 120px;
+    height: 31px;
+    background: rgba(217,217,217,1);
+    margin: 16px 28px 16px 0;
+    float: left;
+  }
