--- a/src/index/components/layout/layout.less
+++ b/src/index/components/layout/layout.less
@@ -7,10 +7,25 @@
     margin-left:12px;
     margin-top:4px;
   }
+  .MyLayout {
+    .ant-layout-header {
+      border-bottom: 1px solid #e8e8e8;
+    }
+    .hg{
+      height: 500px
+    }
+  }
   .logo {
     width: 120px;
     height: 31px;
     background: rgba(217,217,217,1);
     margin: 16px 28px 16px 0;
     float: left;
+  }
+  .bg_top {
+    background: #000000;
+    filter:alpha(Opacity=80);
+    -moz-opacity:0.5;
+    opacity: 0.5;
+    height: 500px;
   }
