--- a/src/index/index.less
+++ b/src/index/index.less
@@ -3,7 +3,7 @@
 //定义全局样式配置
 @bg-color01:#eee;
 @bg-color02:#ddd;
- 
+
 body {
   margin: 0;
   padding: 0;
@@ -18,4 +18,12 @@ body {
     width: 8px;
     height: 8px;
   }
+  ul li{
+    list-style: none
+  }
+  .space0{
+    padding:0;
+    margin: 0;
+  }
 }
+
