--- a/src/index/components/imgcalendar/imgcalendar.less
+++ b/src/index/components/imgcalendar/imgcalendar.less
@@ -5,7 +5,15 @@
     -moz-opacity:0.6;
     opacity:0.6;
     font-size:38px; 
-    div{
-        background:#000;
+    text-align: center;
+    .Position_R {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .ShadeWell{
+
+        }
     }
+
 }
