--- a/src/index/components/imgcalendar/imgcalendar.less
+++ b/src/index/components/imgcalendar/imgcalendar.less
@@ -1,19 +1,23 @@
-.wells{
-    font-weight: 700;
-    color:rgba(255, 255, 255, 0.5);
-    filter:alpha(opacity=50);
-    -moz-opacity:0.6;
-    opacity:0.6;
-    font-size:38px; 
-    text-align: center;
-    .Position_R {
-        position: relative;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        .ShadeWell{
-
+.well_box {
+    box-shadow:90px 0 100px rgba(0, 0, 0, 0.8) inset, 
+            0 50px 100px rgba(0, 0, 0, 0.8) inset,
+            0px -50px 100px rgba(0, 0, 0, 0.8) inset;
+    .wells{
+        font-weight: 700;
+        color:rgba(255, 255, 255, 0.5);
+        filter:alpha(opacity=50);
+        -moz-opacity:0.6;
+        opacity:0.6;
+        font-size:38px; 
+        text-align: center;
+        .Position_R {
+            position: relative;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            .hover{
+                
+            }
         }
     }
-
 }
