--- a/src/index/components/imgcalendar/imgcalendar.less
+++ b/src/index/components/imgcalendar/imgcalendar.less
@@ -15,11 +15,13 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-size:"100% 100%";
             transition: All 0.4s ease-in-out;
             -webkit-transition: All 0.4s ease-in-out;
             -moz-transition: All 0.4s ease-in-out;
             -o-transition: All 0.4s ease-in-out;
+        }
+        .none{
+            display:none
         }
         .Position_R:hover{
             border-radius: 10px;
