--- a/src/index/components/imgcalendar/imgcalendar.less
+++ b/src/index/components/imgcalendar/imgcalendar.less
@@ -8,7 +8,7 @@
         filter:alpha(opacity=50);
         -moz-opacity:0.6;
         opacity:0.6;
-        font-size:38px; 
+        font-size:48px; 
         text-align: center;
         .Position_R {
             position: relative;
@@ -22,6 +22,19 @@
         }
         .none{
             display:none
+        }
+        .ImgContent{
+            position: absolute;
+            color:#fff;
+            top:0px;
+            font-size:18px;
+            font-family:'Microsoft YaHei';
+            font-weight: 400;
+            letter-spacing: 8px;
+            padding: 10px;
+        }
+        .main_img_tag {
+
         }
         .Position_R:hover{
             border-radius: 10px;
