--- a/src/index/index.less
+++ b/src/index/index.less
@@ -7,7 +7,8 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Helvetica Neue",Helvetica,"Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
+  
   //滚动条样式设置
   ::-webkit-scrollbar-thumb {
     background-color: rgba(128,128,128,.5);
