--- a/src/index/components/layout/layout.less
+++ b/src/index/components/layout/layout.less
@@ -1,31 +1,11 @@
-.nav-logo-wrap{
-    display: inline-block;
-    font-size:26px;
-    width: 26px;
-    //height:50px;
-    vertical-align: top;
-    margin-left:12px;
-    margin-top:4px;
-  }
-  .MyLayout {
-    .ant-layout-header {
-      border-bottom: 1px solid #e8e8e8;
-    }
-    .hg{
-      height: 500px
-    }
-  }
-  .logo {
-    width: 120px;
-    height: 31px;
-    background: rgba(217,217,217,1);
-    margin: 16px 28px 16px 0;
-    float: left;
-  }
-  .bg_top {
-    background: #000000;
-    filter:alpha(Opacity=80);
-    -moz-opacity:0.5;
-    opacity: 0.5;
-    height: 500px;
-  }
+.bg{
+  background: url(../../../asset/img/bg.png);
+  background-repeat: repeat-x;
+}
+#components-layout-demo-top .logo {
+  width: 120px;
+  height: 31px;
+  background: rgba(255,255,255,.2);
+  margin: 16px 24px 16px 0;
+  float: left;
+}
