--- a/src/index/components/layout/layout.less
+++ b/src/index/components/layout/layout.less
@@ -1,6 +1,21 @@
 .bg{
+  height: 100vh; 
   background: url(../../../asset/img/bg.png);
-  background-repeat: repeat-x;
+  background-size:100% 100%;  
+  background-repeat: repeat;
+
+  .ant-layout{
+    height: 100%;
+    .ant-layout-sider {
+      height: 100vh;
+      min-width: 100%!important;
+      max-width: 100%!important;
+    }
+    .ant-layout-content {
+      margin: 0px;
+    }
+  }
+
 }
 #components-layout-demo-top .logo {
   width: 120px;
