--- a/src/index/components/layout/layout.less
+++ b/src/index/components/layout/layout.less
@@ -4,18 +4,17 @@
   background-size:100% 100%;  
   background-repeat: repeat;
 
-  .ant-layout{
-    height: 100%;
+  .index-content{
     .ant-layout-sider {
-      height: 100vh;
       min-width: 100%!important;
       max-width: 100%!important;
     }
     .ant-layout-content {
-      margin: 0px;
+      margin: 0px!important;
+      min-width: 100%!important;
+      max-width: 100%!important;
     }
-  }
-
+  } 
 }
 #components-layout-demo-top .logo {
   width: 120px;
