--- a/src/index/components/content/content.less
+++ b/src/index/components/content/content.less
@@ -1,12 +1,20 @@
 @mt15:15px;
 .content_box {
     background-color: #fff;
-    min-height: 100vh-40;
+    min-height: 100vh-30;
     padding:15px;
     .content-search {
         width: 200px
     }
     .content-list {
         margin-top: @mt15;
+        .content-item {
+            margin-top: @mt15;
+        }
+        .page-box {
+            text-align: center;
+            padding:25px 0px;
+        }
     }
+
 }
