--- a/src/index/components/layout/layout.less
+++ b/src/index/components/layout/layout.less
@@ -1,5 +1,5 @@
 .bg{
-  height: 100vh; 
+  min-height: 100vh; 
   background: url(../../../asset/img/bg.png);
   background-size:100% 100%;  
   background-repeat: repeat;
